--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,92 +1,245 @@
 :root {
-    /* CSS HEX */
---persian-orange: #ca8d61ff;
---black-bean: #450f09ff;
---pumpkin: #f67729ff;
---wenge: #70565cff;
---hunyadi-yellow: #f9bf69ff;
+  /* CSS HEX */
+  --persian-orange: #ca8d61ff;
+  --black-bean: #450f09ff;
+  --pumpkin: #f67729ff;
+  --wenge: #70565cff;
+  --hunyadi-yellow: #f9bf69ff;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 body {
-    height: 100%;
+  height: 100%;
 }
 
 /* Fix header to top */
 header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 10%;
-    padding: 2%;
-    background-color: var(--persian-orange);
-    display: flex;
-    align-items: center;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 10%;
+  padding: 4% 2%;
+  background-color: #ca8d61; /* Fallback color */
+  background-image: linear-gradient(
+    45deg,
+    #ca8d61ff,
+    #450f09ff,
+    #f67729ff,
+    #70565cff,
+    #f9bf69ff
+  );
+  display: flex;
+  align-items: center;
 }
 
 h1 {
-  color: var(--black-bean);
+  color: var(--hunyadi-yellow);
   position: relative;
   z-index: 1;
   text-align: left;
   margin-left: 3%;
   width: 30%;
+  flex-grow: 1;
 }
 
 nav {
-    display: flex;
-    justify-content: flex-end;
-    width: 70%;
+  display: flex;
+  justify-content: flex-end;
+  width: 2rem;
 }
 
 /* Hamburger menu for mobile first */
 .hamburger-menu {
-    display: flex;
-    align-items: end;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 2rem;
-    height: 2rem;
-    cursor: pointer;
-    width: 100%;
+  display: flex;
+  align-items: end;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 2rem;
+  height: 2rem;
+  cursor: pointer;
+  width: 100%;
 }
 
 .hamburger-menu li {
-    width: 2rem;
-    height: 0.25rem;
-    background-color: var(--black-bean);
-    list-style: none;
-    border-radius: 20%;
+  width: 2rem;
+  height: 0.25rem;
+  background-color: var(--black-bean);
+  list-style: none;
+  border-radius: 20%;
 }
 
-.hamburger-menu:hover .menu-hover{
-    background-color: var(--wenge);
+.dropdown-menu {
+  display: none;
+}
+
+.hamburger-menu:hover .menu-hover {
+  background-color: var(--wenge);
+}
+
+nav:hover .dropdown-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  width: 25%;
+  background-color: var(--persian-orange); /* Fallback color */
+  background-image: linear-gradient(
+    45deg,
+    #ca8d61ff,
+    #450f09ff,
+    #f67729ff,
+    #70565cff,
+    #f9bf69ff
+  );
+  z-index: 1;
+  padding-right: 2%;
+  font-size: 0.9em;
+}
+
+.dropdown-menu ul {
+  margin: 0;
+  padding: 3%;
+}
+
+.dropdown-menu li {
+    display: flex;
+    justify-content: center;
+  list-style: none;
+  text-transform: lowercase;
+  line-height: 1.2;
+}
+
+.dropdown-menu li a {
+  text-decoration: none;
+  color: var(--hunyadi-yellow);
+}
+
+.dropdown-menu li a:hover {
+  color: var(--pumpkin);
+}
+
+.wider-menu {
+  display: none;
+}
+
+main {
+  padding: 5% 2%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--hunyadi-yellow);
+}
+
+#about, #portfolio, #contact {
+  position: relative;
+  margin-top: 10%;
+  width: 95%;
+  text-align: center;
+  background-color: var(--pumpkin);
+  border-radius: 2%;
+  padding-top: 5%;
+}
+
+#about img {
+    max-width: 70%;
+    height: auto;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.hero-overlay, .other-work-overlay {
+  position: relative;
+}
+
+.hero-overlay-text {
+  position: absolute;
+  bottom: 20%;
+  left: 0;
+  color: var(--hunyadi-yellow);
+  font-size: 1.2em;
+  background-color: var(--black-bean);
+  padding: 2% 3%;
+}
+
+.other-work-overlay-text {
+  position: absolute;
+  bottom: 20%;
+  left: 0;
+  color: var(--hunyadi-yellow);
+  font-size: 1.1em;
+  background-color: var(--black-bean);
+  padding: 2% 3%;
+}
+
+.hero-app {
+    max-width: 100%;
+}
+
+.other-apps {
+    max-width: 100%;
+}
+
+
+
+footer {
+  width: 100%;
+  height: 10%;
+  padding: 2%;
+  background-color: #ca8d61; /* Fallback color */
+  background-image: linear-gradient(
+    45deg,
+    #ca8d61ff,
+    #450f09ff,
+    #f67729ff,
+    #70565cff,
+    #f9bf69ff
+  );
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* When viewport is larger than 768px */
 @media screen and (min-width: 768px) {
-    ul {
-        display: flex;
-        justify-content: flex-end;
-        list-style: none;
-    }
 
-    li {
-        padding: 1% 3%;
-        font-size: 1.2em;
-    }
+  .hamburger-menu, nav:hover .dropdown-menu {
+    display: none;
+  }
 
-    li a {
-        text-decoration: none;
-        color: var(--black-bean);
-        cursor: pointer;
-    }
+  .wider-menu {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    z-index: 2;
+  }
 
-    li a:hover {
-        color: var(--wenge);
-    }   
+  ul {
+    display: flex;
+    justify-content: flex-end;
+    list-style: none;
+  }
+
+  li {
+    padding: 1% 3%;
+    font-size: 1.4em;
+  }
+
+  li a {
+    text-decoration: none;
+    color: var(--hunyadi-yellow);
+    cursor: pointer;
+  }
+
+  li a:hover {
+    color: var(--pumpkin);
+  }
 }
